--- a/medicalrecords.css
+++ b/medicalrecords.css
@@ -1,5 +1,32 @@
-@media (min-width: 280px) and (max-width: 768px) {
-  .record-list {
-    overflow-x: scroll;
+.record_list table {
+  width: 100%;
+}
+
+/* Reduce the font size and line height on small screens */
+@media screen and (max-width: 600px) {
+  .record_list table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  .record_list th,
+  .record_list td {
+    padding: 8px;
+    text-align: left;
+    vertical-align: middle;
+
+    border-bottom: 1px solid #ddd;
+    min-width: 150px;
+  }
+
+  .record_list tr:hover {
+    background-color: #f5f5f5;
+  }
+}
+
+/* Hide the table header cells on small screens */
+@media screen and (max-width: 400px) {
+  .record_list th {
+    display: none;
   }
 }
